# Rfp-hackathon

./: .env.example  .gitignore  Dockerfile  README.md  app.py  output_prompt.txt  pyproject.toml  requirements.txt
data/healthcare/: healthcare.txt
data/logistics/: logistics_doc.txt
rfp_automation/agents/: __init__.py  budget_agent.py  knowledge_management.py  market_research.py  nlp_parser.py  recommendation_engine.py  rfp_generator.py  vendor_intelligence.py
rfp_automation/config/: settings.py
rfp_automation/utils/: llm.py
rfp_automation/workflow/: enhanced_workflow.py  state.py
rfp_response/: app3.py
